# AgroGuardian

./: TODOs.md  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/dev/jcctech/agroguardian/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  llama_jni.cpp
app/src/main/java/: ToDo.md
app/src/main/java/com/dev/jcctech/agroguardian/: App.kt  MainActivity.kt  MyApp.kt
app/src/main/java/com/dev/jcctech/agroguardian/ui/: Main.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/com/dev/jcctech/agroguardian/: ExampleUnitTest.kt
composeApp/: build.gradle.kts
composeApp/src/androidMain/: AndroidManifest.xml
composeApp/src/androidMain/kotlin/org/example/agroguardian/: MainActivity.kt  Platform.android.kt
composeApp/src/androidMain/kotlin/org/example/agroguardian/data/repository/: AndroidWeatherRepository.kt
composeApp/src/androidMain/res/values/: strings.xml
composeApp/src/commonMain/kotlin/org/example/agroguardian/: App.kt  Greeting.kt  Platform.kt
composeApp/src/commonMain/kotlin/org/example/agroguardian/data/: ds.kt
composeApp/src/commonMain/kotlin/org/example/agroguardian/theme/: Color.kt  Fonts.kt  Theme.kt  Typography.kt
composeApp/src/commonMain/kotlin/org/example/agroguardian/ui/: Main.kt
composeApp/src/iosMain/kotlin/org/example/agroguardian/: MainViewController.kt  Platform.ios.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
iosApp/Configuration/: Config.xcconfig
iosApp/iosApp.xcodeproj/: project.pbxproj
(+85 files in other folders)
